[ref][add]: Codes refactored for better use, solution added for last days. (Some days only has part2 solution, because part2 solution has been created by refactoring part1 solution)